After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 610063 - _gdk_keymap_add_virtual_modifiers_compat isn't in the header file
_gdk_keymap_add_virtual_modifiers_compat isn't in the header file
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
2.19.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-02-16 04:45 UTC by Javier Jardón (IRC: jjardon)
Modified: 2010-02-16 20:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Change the header name (1.31 KB, patch)
2010-02-16 04:49 UTC, Javier Jardón (IRC: jjardon)
committed Details | Review

Description Javier Jardón (IRC: jjardon) 2010-02-16 04:45:06 UTC
This commit:

http://git.gnome.org/browse/gtk+/commit/?id=13d69e552dffe681ee80c0600366a8c04fc205c6

changed the name of the function _gdk_keymap_add_virtual_modifiers to 
_gdk_keymap_add_virtual_modifiers_compat

Patch following
Comment 1 Javier Jardón (IRC: jjardon) 2010-02-16 04:49:21 UTC
Created attachment 153893 [details] [review]
Change the header name
Comment 2 Matthias Clasen 2010-02-16 13:44:49 UTC
Comment on attachment 153893 [details] [review]
Change the header name

Oh, did I forget that ?
Please commit
Comment 3 Javier Jardón (IRC: jjardon) 2010-02-16 20:00:06 UTC
Comment on attachment 153893 [details] [review]
Change the header name

commit 41ef40bec0afa8625f0f18924886dcc1c8645928