[gdk/x11] Change the name of the functions in the header file

_gdk_keymap_add_virtual_modifiers() changed to
_gdk_keymap_add_virtual_modifiers_compat() in
commit 13d69e552dffe681ee80c0600366a8c04fc205c6
This patch change the header name too.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=610063